--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 # TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
 authors = ["decaday <myDecaday@outlook.com>"]
-name = "defmt-test"
+name = "bind-hal"
 edition = "2021"
 version = "0.1.0"
 build = "build.rs"
@@ -20,6 +20,13 @@ cortex-m-semihosting = "0.5.0"
 py32csdk-hal-sys = {path = "../py32csdk-hal-sys"}
 embedded-hal = "1.0.0-alpha.11"
 
+
+[features]
+default = ["py32_0-A"]
+py32_0-A = ["py32csdk-hal-sys/py32_0-A", "peri-gpioa", "peri-gpiob", "peri-gpiof"]
+peri-gpioa = []
+peri-gpiob = []
+peri-gpiof = []
 
 # cargo build/run
 [profile.dev]
