--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
-# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
 authors = ["decaday <myDecaday@outlook.com>"]
 name = "bind-hal"
 edition = "2021"
 version = "0.1.0"
 build = "build.rs"
+license-file = "LICENSE"
+description = "MCU HALs using binding, currently supports PY32"
+readme = "README.md"
+homepage = "https://github.com/decaday/bind-hal"
+repository = "https://github.com/decaday/bind-hal"
+keywords = ["embedded-hal", "no-std", "py32", "mcu"]
+categories = ["no-std"]
+exclude = ["src/main.rs"]
+
 
 [lib]
 harness = false
@@ -17,7 +25,7 @@ defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 cortex-m-semihosting = "0.5.0"
 
-py32csdk-hal-sys = {path = "../py32csdk-hal-sys"}
+py32csdk-hal-sys = "0.1.1"
 embedded-hal = "1.0.0-alpha.11"
 
 
@@ -33,6 +41,11 @@ peri-gpioa = []
 peri-gpiob = []
 peri-gpiof = []
 
+
+[patch.crates-io]
+py32csdk-hal-sys = { path = "../py32csdk-hal-sys" }
+
+
 # cargo build/run
 [profile.dev]
 codegen-units = 1
@@ -46,10 +59,10 @@ overflow-checks = true  # <-
 [profile.test]
 codegen-units = 1
 debug = 2
-debug-assertions = true # <-
+debug-assertions = true
 incremental = false
-opt-level = 3           # <-
-overflow-checks = true  # <-
+opt-level = 3
+overflow-checks = true
 
 # cargo build/run --release
 [profile.release]
