--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,21 +25,37 @@ defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 cortex-m-semihosting = "0.5.0"
 
-py32csdk-hal-sys = "0.1.2"
+embassy-sync = { version = "0.6.0", optional = true }
+embassy-futures = { version = "0.1.1", optional = true }
+embassy-time-driver = { version = "0.1.0", features = [
+    "tick-hz-1_000",
+], optional = true }
+embassy-time = { version = "0.3.0", features = [
+    "tick-hz-1_000",
+], optional = true }
+
+py32csdk-hal-sys = "0.1.3"
 embedded-hal = "1.0.0-alpha.11"
+
+# thiserror = "1.0"
 
 
 [features]
 default = ["py32f030"]
 py32f030 = [
     "py32csdk-hal-sys/py32f030", "csdk-hal",
-    "peri-gpioa", "peri-gpiob", "peri-gpiof"
+    "peri-gpioa", "peri-gpiob", "peri-gpiof",
+    "peri-i2c"
 ]
 csdk-hal = []
 
 peri-gpioa = []
 peri-gpiob = []
 peri-gpiof = []
+peri-i2c = []
+peri-i2c1 = []
+peri-i2c2 = []
+
 
 
 [patch.crates-io]
