feat: time driver

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -12,6 +12,12 @@ rustflags = [
   "-C", "link-arg=--nmagic",
 ]
 
+[env]
+
+[toolchain]
+
+
+
 [build]
 target = "thumbv6m-none-eabi"    # Cortex-M0 and Cortex-M0+
 
