--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ defmt = "0.3"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 cortex-m-semihosting = "0.5.0"
+critical-section = { version = "1.1" }
 
 embassy-sync = { version = "0.6.0", optional = true }
 embassy-futures = { version = "0.1.1", optional = true }
@@ -39,9 +40,24 @@ embedded-hal = "1.0.0-alpha.11"
 
 # thiserror = "1.0"
 
+embassy-executor = { version = "0.5", features = [
+    "nightly",
+    "integrated-timers",
+    "arch-cortex-m",
+    "executor-thread",
+] }
+
 
 [features]
-default = ["py32f030"]
+default = ["py32f030", "embassy"]
+
+embassy = [
+    "dep:embassy-sync",
+    "dep:embassy-futures",
+    "dep:embassy-time-driver",
+    "dep:embassy-time",
+]
+
 py32f030 = [
     "py32csdk-hal-sys/py32f030", "csdk-hal",
     "peri-gpioa", "peri-gpiob", "peri-gpiof",
