--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ cortex-m-rt = "0.7"
 defmt = "0.3"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
-cortex-m-semihosting = "0.5.0"
+# cortex-m-semihosting = { version = "0.5", features = ["no-semihosting"] }
+cortex-m-semihosting = { version = "0.5" }
 critical-section = { version = "1.1" }
 
 embassy-sync = { version = "0.6.0", optional = true }
