--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ embassy-time = { version = "0.3.0", features = [
 futures-util = { version = "0.3.30", default-features = false }
 
 embedded-hal = "1.0.0-alpha.11"
+embedded-hal-async = "1.0"
 
 py32csdk-hal-sys = "0.1.3"
 defmt = { version = "0.3", optional = true }
