--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ cortex-m-semihosting = { version = "0.5" }
 defmt-rtt = "0.4"
 defmt = { version = "0.3", optional = true }
 
-
+bitflags = "2.6"
 critical-section = { version = "1.1" }
 
 embassy-sync = { version = "0.6.0", optional = true }
