--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,6 @@ cortex-m-semihosting = { version = "0.5" }
 defmt-rtt = "0.4"
 defmt = { version = "0.3", optional = true }
 
-bitflags = "2.6"
 critical-section = { version = "1.1" }
 
 embassy-sync = { version = "0.6.0", optional = true }
@@ -46,6 +45,7 @@ futures-util = { version = "0.3.30", default-features = false }
 
 embedded-hal = "1.0.0-alpha.11"
 embedded-hal-async = "1.0"
+embedded-io = "0.6"
 
 py32csdk-hal-sys = "0.4.0"
 
