--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["decaday <myDecaday@outlook.com>"]
 name = "py32-bind-hal"
 edition = "2021"
-version = "0.4.1"
+version = "0.5.0"
 build = "build.rs"
 license-file = "LICENSE"
 description = "MCU HALs using binding, currently supports PY32"
@@ -18,13 +18,8 @@ exclude = ["src/main.rs"]
 harness = false
 
 [dependencies]
-cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7"
-panic-probe = { version = "0.3", features = ["print-defmt"] }
-cortex-m-semihosting = { version = "0.5" }
-defmt-rtt = "0.4"
 defmt = { version = "0.3", optional = true }
-
 critical-section = { version = "1.1" }
 
 embassy-sync = { version = "0.6.0", optional = true }
@@ -41,17 +36,16 @@ embassy-executor = { version = "0.6", features = [
     "arch-cortex-m",
     "executor-thread",
 ] }
-futures-util = { version = "0.3.30", default-features = false }
 
 embedded-hal = "1.0.0-alpha.11"
 embedded-hal-async = "1.0"
 embedded-io = "0.6"
 
-py32csdk-hal-sys = "0.4.0"
-
+# py32csdk-hal-sys = "0.4.0"
+py32csdk-hal-sys = { path = "../py32csdk-hal-sys" }
 
 [features]
-default = ["py32f030", "ram_rom_py32xxx6", "embassy", "time", "defmt", "auto_memory_x"]
+default = ["py32f030", "embassy", "time", "defmt"]
 
 embassy = [
     "dep:embassy-sync",
@@ -63,7 +57,7 @@ time = [
 ]
 defmt = ["dep:defmt", "embassy-sync/defmt", "embassy-time?/defmt"]
 
-auto_memory_x = []
+# auto_memory_x = []
 recompile = ["py32csdk-hal-sys/recompile"]
 
 py32f030 = [
@@ -71,9 +65,9 @@ py32f030 = [
     "peri-gpioa", "peri-gpiob", "peri-gpiof",
     "peri-i2c", "peri-i2c0", "peri-dma"
 ]
-ram_rom_py32xxx6 = ["py32csdk-hal-sys/py32xxx6"]
-ram_rom_py32xxx8 = ["py32csdk-hal-sys/py32xxx8"]
-ram_rom_py32f002ax5 = []
+# ram_rom_py32xxx6 = ["py32csdk-hal-sys/py32xxx6"]
+# ram_rom_py32xxx8 = ["py32csdk-hal-sys/py32xxx8"]
+# ram_rom_py32f002ax5 = []
 csdk-hal = []
 
 peri-gpioa = []
@@ -94,25 +88,4 @@ default-target = "thumbv6m-none-eabi"
 
 [patch.crates-io]
 py32csdk-hal-sys = { path = "../py32csdk-hal-sys" }
-
-
-# cargo build/run
-[profile.dev]
-codegen-units = 1
-debug = 2
-debug-assertions = true # <-
-incremental = false
-opt-level = 'z'         # <-
-overflow-checks = true  # <-
-
-
-# cargo build/run --release
-[profile.release]
-codegen-units = 1
-debug = 2
-debug-assertions = false # <-
-incremental = false
-lto = 'fat'
-opt-level = 3            # <-
-overflow-checks = false  # <-
 
